--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,11 @@ jobs:
         working-directory: Odin-GameEngine
         shell: cmd
         run: |
-          build.bat release
+          ./build.bat release
 
       - name: Build resource_packer
-        working-directory: .
         run: |
-          Odin-GameEngine\odin.exe build resource_packer -o:speed
+          Odin-GameEngine/odin.exe build resource_packer -o:speed
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
@@ -67,7 +66,6 @@ jobs:
           ./build_odin.sh release
 
       - name: Build resource_packer
-        working-directory: .
         run: |
           Odin-GameEngine/odin build resource_packer -o:speed
           chmod +x ./resource_packer
@@ -103,7 +101,6 @@ jobs:
           ./build_odin.sh release
 
       - name: Build resource_packer
-        working-directory: .
         run: |
           Odin-GameEngine/odin build resource_packer -o:speed
           chmod +x ./resource_packer
