--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,8 +56,9 @@ jobs:
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          sudo ./llvm.sh 18
-          echo "/usr/lib/llvm-18/bin" >> $GITHUB_PATH
+          sudo ./llvm.sh 20
+          echo "/usr/lib/llvm-20/bin" >> $GITHUB_PATH
+          sudo apt-get install -y libstdc++-14-dev
 
       - name: Build Odin Compiler
         working-directory: Odin-GameEngine
@@ -90,7 +91,8 @@ jobs:
 
       - name: Install LLVM
         run: |
-          brew install llvm@20
+          brew install llvm@20 lld@20
+          echo "$(brew --prefix llvm@20)/bin" >> $GITHUB_PATH
 
       - name: Build Odin Compiler
         working-directory: Odin-GameEngine
